# actix-web-sample

./: Cargo.toml  README.md  init.sql
src/: db.rs  main.rs  models.rs  views.rs
src/models/: grozs.rs  parks.rs  rezultats.rs  speletajs.rs  trase.rs  turnirs.rs  turnirsspeletajs.rs
src/views/: admin.rs  parks.rs  rezultats.rs  speletajs.rs  trase.rs  turnirs.rs
src/views/admin/: grozs.rs  mod.rs  parks.rs  speletajs.rs  turnirs.rs
templates/: base.html  error.html  index.html  parks.html
templates/admin/: e_grozs.html  e_parks.html  e_speletajs.html  e_turnirs.html  grozs.html  main.html  parks.html  speletajs.html  turnirs.html
templates/parks/: parks.html  parks_single.html  trase.html  trase_details.html
templates/rezultats/: rezultats.html
templates/speletajs/: speletajs.html  speletajs_single.html
templates/turnirs/: turnirs.html  turnirs_add.html  turnirs_single.html
