[package]
name = "disc-backend"
version = "0.1.0"
authors = ["Roberts Ivanovs <robertsivanovs1999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

env_logger = "0.7"
tera = "1.5"
actix-http = "2"
actix-web = "3"
mysql = "20.0.1"
lazy_static = "1.4"
serde = "1"
